src/components/layout/index.css
.navbar {
  padding: 0 !important;
}

.navItem-active {
  z-index: 1;
  background-color: #03b2cb;
}

.navbar a:hover,
.dropdown:hover .dropbtn {
  background-color: #03b2cb;
}

#signoutButton:hover {
  background-color: #f5222d
}

a.initialsButton {
  line-height: 100% !important;
  width: 100% !important;
  text-align: center !important;
}

li.nav-item.dropdown div {
  display: none;
}

li.nav-item.dropdown:hover div {
  display: block;
  background-color: #000000;
  opacity: 0.9;
}

.nav-link {
  background-color: transparent;
  color: white; 
  border: none;
  cursor: pointer;
  display: inline;
  padding: 0 1rem !important;
}

@media (max-width: 600px) {
  .nav-link {
    padding: 0 4px !important;
    font-size: 16px;
  }
}

li a {
  margin: 0 !important;
}

.dropdown-menu.dropdown-menu-right {
  margin: 0 !important;
  border: 0 !important;
  padding: 0 !important;
}

.row-full {
  /* position: fixed; */
  width: 100%;
  margin: 0 auto;
  text-align: center;
}

.input-group {
  align-content: center;
  align-items: center !important;
}

